turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:6: error: integer number too large
    droite(51,4285714286)
              ^